# simple_ssh_pot

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  config.ini  config.toml  config_example.ini  docker-compose.example.yml  docker-compose.yml  ecosystem.config.js  main.py  readme.md
.github/workflows/: docker.yml  release.yml
src/: main.rs
systemd/: listenssh.service
utils/: discordwebhook.py
