[package]
name = "simple_ssh_pot"
version = "0.0.1"
edition = "2021"

[dependencies]
cached = { version = "0.45.1", features = ["async"] }
config = "0.13.3"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
simplelog = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tokio-util = "0.7"
